Configured Ocelot Gateway

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,25 +1,21 @@
-version: '3.4'
+﻿version: '3.4'
 
 services:
-  music.api:
+  gateway:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-      - ASPNETCORE_HTTPS_PORT=44361
     ports:
-      - "42004:80"
-      - "44361:443"
-    volumes:
-      - ~/.aspnet/https:/root/.aspnet/https:ro
-      - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
+      - "5555:80"
+
   movie.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-      - ASPNETCORE_HTTPS_PORT=44323
     ports:
-      - "58709:80"
-      - "44323:443"
-    volumes:
-      - ~/.aspnet/https:/root/.aspnet/https:ro
-      - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
+      - "5556:80"
+
+
+  music.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "5557:80"
