--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,10 @@ services:
       context: .
       dockerfile: Services/Movie.API/Dockerfile
       
+      
+  gateway:
+    image: ${DOCKER_REGISTRY-}gateway
+    build:
+      context: .
+      dockerfile: Gateway/Dockerfile
 
