Movies API SQL Server

--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -1,8 +1,26 @@
-{
+﻿{
   "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+      "LogLevel": {
+          "Default": "Warning"
+      }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "spring": {
+      "application": {
+          "name": "Gateway"
+      }
+  },
+  "eureka": {
+      "client": {
+          "shouldRegisterWithEureka": false,
+          "defaultZone": "http://localhost:8761/eureka/",
+          "shouldFetchRegistry": true
+
+      },
+      "instance": {
+          "appName": "Gateway",
+          "port": "5555",
+          "hostName": "localhost"
+      }
+  }
 }
