--- a/Services/Movie.API/appsettings.json
+++ b/Services/Movie.API/appsettings.json
@@ -1,8 +1,28 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=sql.database;Database=master;User=sa;Password=felipe123"
+  },
+  "spring": {
+      "application": {
+          "name": "Movie.API"
+      }
+  },
+    "eureka": {
+        "client": {
+            "shouldRegisterWithEureka": true,
+            "defaultZone": "http://localhost:8761/eureka/",
+            "shouldFetchRegistry": false
+        },
+        "instance": {
+            "appName": "Movie.API",
+            "port": "5556",
+            "hostName": "localhost"
+        }
+    }
+  }
