--- a/Services/Music.API/appsettings.json
+++ b/Services/Music.API/appsettings.json
@@ -1,8 +1,25 @@
-{
+﻿{
   "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+      "LogLevel": {
+          "Default": "Warning"
+      }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "spring": {
+      "application": {
+          "name": "Music.API"
+      }
+  },
+  "eureka": {
+      "client": {
+          "shouldRegisterWithEureka": true,
+          "defaultZone": "http://localhost:8761/eureka/",
+          "shouldFetchRegistry": false
+      },
+      "instance": {
+          "appName": "Music.API",
+          "port": "5557",
+          "hostName": "localhost"
+      }
+  }
 }
