--- a/Gateway/Gateway.csproj
+++ b/Gateway/Gateway.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Ocelot" Version="13.5.2" />
+    <PackageReference Include="Steeltoe.Discovery.ClientCore" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
