--- a/Services/Movie.API/appsettings.json
+++ b/Services/Movie.API/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=sql.database;Database=master;User=sa;Password=felipe123"
+    "Default": "Server=sqlmoviedatabase;Database=MovieService;User=sa;Password=Fk-028594;"
   },
   "spring": {
       "application": {
@@ -16,13 +16,13 @@
     "eureka": {
         "client": {
             "shouldRegisterWithEureka": true,
-            "defaultZone": "http://localhost:8761/eureka/",
+            "serviceUrl": "http://eureka:8761/eureka",
             "shouldFetchRegistry": false
         },
         "instance": {
             "appName": "Movie.API",
-            "port": "5556",
-            "hostName": "localhost"
+            "hostName": "movieservice",
+            "port": 5556
         }
     }
   }
