--- a/Services/Music.API/Dockerfile
+++ b/Services/Music.API/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
+﻿FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
@@ -9,6 +9,7 @@ COPY Services/Music.API/Music.API.csproj Services/Music.API/
 RUN dotnet restore "Services/Music.API/Music.API.csproj"
 COPY . .
 WORKDIR "/src/Services/Music.API"
+RUN dotnet ef migrations add InitialCreate
 RUN dotnet build "Music.API.csproj" -c Release -o /app
 
 FROM build AS publish
