--- a/Services/Music.API/appsettings.json
+++ b/Services/Music.API/appsettings.json
@@ -5,6 +5,9 @@
       }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=sqlmusicdatabase;Database=MusicService;User=sa;Password=Fk-028594;"
+  },
   "spring": {
       "application": {
           "name": "Music.API"
@@ -13,13 +16,13 @@
   "eureka": {
       "client": {
           "shouldRegisterWithEureka": true,
-          "defaultZone": "http://localhost:8761/eureka/",
+          "serviceUrl": "http://eureka:8761/eureka",
           "shouldFetchRegistry": false
       },
       "instance": {
           "appName": "Music.API",
-          "port": "5557",
-          "hostName": "localhost"
+          "hostName": "musicservice",
+          "port": 5557
       }
   }
 }
