--- a/Gateway/Gateway.csproj
+++ b/Gateway/Gateway.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Ocelot" Version="13.5.2" />
     <PackageReference Include="Steeltoe.Discovery.ClientCore" Version="2.2.0" />
+    <PackageReference Include="Ocelot.Provider.Eureka" Version="13.5.2" />
+    <PackageReference Include="Ocelot.Cache.CacheManager" Version="13.5.2" />
   </ItemGroup>
 
 </Project>
