--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -12,15 +12,15 @@
   },
   "eureka": {
       "client": {
-          "shouldRegisterWithEureka": false,
-          "defaultZone": "http://localhost:8761/eureka/",
+          "shouldRegisterWithEureka": true,
+          "serviceUrl": "http://eureka:8761/eureka",
           "shouldFetchRegistry": true
 
       },
       "instance": {
           "appName": "Gateway",
-          "port": "5555",
-          "hostName": "localhost"
+          "hostName": "gateway",
+          "port": 5555
       }
   }
 }
